--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,28 +10,22 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1
   firebase_auth: ^5.6.2
   flutter_facebook_auth: ^7.1.2
-  google_fonts: ^6.2.1
   firebase_core: ^3.15.1
   http: ^1.2.0
-  js: ^0.7.2
-  meta: ^1.17.0
+  js: ^0.6.7
+  meta: ^1.16.0
   flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0
-
-dependency_overrides:
-  flutter_secure_storage_linux: ^2.0.1
-  flutter_secure_storage_macos: ^4.0.0
-  flutter_secure_storage_web: ^2.0.0
-  flutter_secure_storage_windows: ^4.0.0
-  flutter_secure_storage_platform_interface: ^2.0.1
+  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/icons/
